# CFU-WIB-GRAPHQL

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml
api/: .gitignore  Dockerfile  Jenkinsfile  chart_generator.py  config.py  database.py  entrypoints.sh  graphql_schema.py  llm_engine.py  main.py  model.py  pyproject.toml  requirements.txt  routes.py  security.py  sonar-project.properties  utils.py
api/lib/: cfu_prompt.py  general_q_prompt.py  prompt.py  valid_values.json
chainlit/: Dockerfile  app.py  requirements.txt
chainlit/.chainlit/: config.toml
